<resources>
    <string name="app_name">PM_Videojuego</string>
    <string name="titulo_juego">FROGGDROID</string>
    <string name="ajustes">AJUSTES</string>
    <string name="jugar">JUGAR</string>
    <string name="ajus_sonido">Ajustes de Sonido</string>
    <string name="bgm">BGM (Música)</string>
    <string name="sfx_efectos">SFX (Efectos)</string>
    <string name="ajustes_de_juego">Ajustes de Juego</string>
    <string name="n_de_vidas">Número de Vidas</string>
    <string name="ganas">¡HAS GANADO!</string>
    <string name="tabla_puntuaciones">TABLA PUNTUACIONES</string>
</resources>
